--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am in the UM Coding bootcamp</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Mexico City, Mx</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Sports</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Tennis player</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Brickell</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Create my own business project</p>
     </section>
 
     <footer id="footer">
